build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0196.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0196.html
---
@base <file:///0196.html> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
<http://www.example.org> <http://example.org/rdf/plainlit> "This is a plain literal" ;
	<http://example.org/rdf/xmllit> "This is an XMLLiteral"^^rdf:XMLLiteral .
